# cpp-math

./: .replit  CMakeLists.txt  LICENSE  README.md  build.sh  githubClear.sh  replit.nix  todo.md
docs/: _config.yml  index.md
docs/docs/: degtrad.md  index.md  pow.md  radtdeg.md
docs/docs/quadratics/: QuadraticEquation.md  index.md
docs/docs/trigonometry/: cos.md  index.md  sin.md
docs/examples/: index.md  quadratics.md
docs/quadratics/: QuadraticEquation.md  QuadraticEquation.mdraw  index.html  index.md
examples/: cos  cos.cpp  degtrad  degtrad.cpp  radtdeg  radtdeg.cpp  sin  sin.cpp
include/cpp-math/: cpp-math.hpp
src/: basic.hpp  cppmath.hpp  expression.cpp  files.md  quadratics.hpp
test/: CMakeLists.txt  expression.cpp
tests/: basic  basic.cpp  quadratics  quadratics.cpp  trigonometry  trigonometry.cpp
